--- a/package.json
+++ b/package.json
@@ -26,31 +26,31 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-beta.55",
-    "@babel/core": "7.0.0-beta.55",
-    "@babel/plugin-proposal-class-properties": "7.0.0-beta.55",
-    "@babel/plugin-proposal-decorators": "7.0.0-beta.55",
-    "@babel/plugin-proposal-do-expressions": "7.0.0-beta.55",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-beta.55",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-beta.55",
-    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-beta.55",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0-beta.55",
-    "@babel/plugin-proposal-pipeline-operator": "7.0.0-beta.55",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-beta.55",
-    "@babel/plugin-transform-runtime": "7.0.0-beta.55",
-    "@babel/preset-env": "7.0.0-beta.55",
-    "@babel/preset-react": "7.0.0-beta.55",
+    "@babel/cli": "7.0.0-rc.1",
+    "@babel/core": "7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
+    "@babel/plugin-proposal-decorators": "7.0.0-rc.1",
+    "@babel/plugin-proposal-do-expressions": "7.0.0-rc.1",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-rc.1",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0-rc.1",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-rc.1",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0-rc.1",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0-rc.1",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0-rc.1",
+    "@babel/plugin-transform-runtime": "7.0.0-rc.1",
+    "@babel/preset-env": "7.0.0-rc.1",
+    "@babel/preset-react": "7.0.0-rc.1",
     "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "9.0.2",
+    "autoprefixer": "9.1.1",
     "ava": "0.25.0",
     "babel-eslint": "8.2.6",
     "babel-loader": "8.0.0-beta.2",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.14",
-    "caniuse-lite": "1.0.30000865",
+    "caniuse-lite": "1.0.30000877",
     "css-loader": "1.0.0",
     "cssnano": "4.0.5",
-    "enzyme": "3.3.0",
+    "enzyme": "3.4.3",
     "eslint": "4.19.1",
     "eslint-config-airbnb": "16.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
@@ -64,13 +64,13 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "0.14.3",
     "js-yaml": "3.12.0",
-    "lint-staged": "7.2.0",
+    "lint-staged": "7.2.2",
     "lost": "8.3.0",
     "mini-css-extract-plugin": "0.4.1",
     "mkdirp": "0.5.1",
     "postcss": "7.0.2",
-    "postcss-import": "11.1.0",
-    "postcss-loader": "2.1.6",
+    "postcss-import": "12.0.0",
+    "postcss-loader": "3.0.0",
     "postcss-nested": "3.0.0",
     "postcss-normalize": "6.0.0",
     "postcss-preset-env": "5.3.0",
@@ -80,27 +80,27 @@
     "react-hot-loader": "4.3.4",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.21.0",
+    "style-loader": "0.22.1",
     "stylelint": "9.4.0",
     "stylelint-config-recommended": "2.1.0",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
-    "uglifyjs-webpack-plugin": "1.2.7",
-    "webpack": "4.16.4",
+    "uglifyjs-webpack-plugin": "1.3.0",
+    "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.5"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
+    "@babel/runtime": "7.0.0-rc.1",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "1.3.3",
-    "apollo-cache-inmemory": "1.2.6",
-    "apollo-client": "2.3.7",
+    "apollo-cache-inmemory": "1.2.8",
+    "apollo-client": "2.4.0",
     "apollo-link": "1.2.2",
     "apollo-link-context": "1.0.8",
     "apollo-link-error": "1.1.0",
-    "apollo-link-form-data": "0.3.1",
+    "apollo-link-form-data": "0.3.2",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.7",
@@ -114,10 +114,10 @@
     "lodash": "4.17.10",
     "lodash-decorators": "6.0.0",
     "mobx": "5.0.3",
-    "mobx-react": "5.2.3",
-    "mobx-state-tree": "3.0.2",
+    "mobx-react": "5.2.5",
+    "mobx-state-tree": "3.2.1",
     "ms": "2.1.1",
-    "nanoid": "1.1.0",
+    "nanoid": "1.2.1",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "p-reduce": "1.0.0",
@@ -128,11 +128,11 @@
     "react-autosize-textarea": "4.0.0",
     "react-dom": "16.4.2",
     "react-helmet": "5.2.0",
-    "react-lazy-images": "1.0.1",
-    "react-loadable": "5.4.0",
+    "react-lazy-images": "1.1.0",
+    "react-loadable": "5.5.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-spinners": "0.3.3",
+    "react-spinners": "0.4.4",
     "whatwg-fetch": "2.0.4",
     "whatwg-url": "6.5.0"
   }
