--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "w": "yarn watch",
     "stats": "node_modules/.bin/mkdirp runtime/webpack && NODE_ENV=production node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
     "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
-    "lint:eslint": "node_modules/.bin/eslint src build",
+    "lint:eslint": "node_modules/.bin/eslint --fix src build",
     "lint:stylelint": "node_modules/.bin/stylelint --fix",
     "staged": "node_modules/.bin/lint-staged",
     "precommit": "yarn staged"
@@ -26,38 +26,38 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0-rc.1",
-    "@babel/core": "7.0.0-rc.1",
-    "@babel/plugin-proposal-class-properties": "7.0.0-rc.1",
-    "@babel/plugin-proposal-decorators": "7.0.0-rc.1",
-    "@babel/plugin-proposal-do-expressions": "7.0.0-rc.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0-rc.1",
-    "@babel/plugin-proposal-object-rest-spread": "7.0.0-rc.1",
-    "@babel/plugin-proposal-optional-catch-binding": "7.0.0-rc.1",
-    "@babel/plugin-proposal-optional-chaining": "7.0.0-rc.1",
-    "@babel/plugin-proposal-pipeline-operator": "7.0.0-rc.1",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0-rc.1",
-    "@babel/plugin-transform-runtime": "7.0.0-rc.1",
-    "@babel/preset-env": "7.0.0-rc.1",
-    "@babel/preset-react": "7.0.0-rc.1",
-    "@octetstream/eslint-config": "2.1.0",
-    "autoprefixer": "9.1.1",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/plugin-proposal-do-expressions": "7.0.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-optional-catch-binding": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "@octetstream/eslint-config": "3.0.0",
+    "autoprefixer": "9.1.3",
     "ava": "0.25.0",
-    "babel-eslint": "8.2.6",
-    "babel-loader": "8.0.0-beta.2",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "8.0.0",
     "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.14",
-    "caniuse-lite": "1.0.30000877",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
+    "caniuse-lite": "1.0.30000880",
     "css-loader": "1.0.0",
-    "cssnano": "4.0.5",
-    "enzyme": "3.4.3",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
+    "cssnano": "4.1.0",
+    "enzyme": "3.5.0",
+    "eslint": "5.4.0",
+    "eslint-config-airbnb": "17.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
-    "eslint-plugin-ava": "4.5.1",
-    "eslint-plugin-import": "2.12.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.9.1",
+    "eslint-plugin-ava": "5.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "graphql-tag": "2.9.2",
     "html-webpack-harddisk-plugin": "0.2.0",
@@ -66,7 +66,7 @@
     "js-yaml": "3.12.0",
     "lint-staged": "7.2.2",
     "lost": "8.3.0",
-    "mini-css-extract-plugin": "0.4.1",
+    "mini-css-extract-plugin": "0.4.2",
     "mkdirp": "0.5.1",
     "postcss": "7.0.2",
     "postcss-import": "12.0.0",
@@ -77,26 +77,26 @@
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "4.1.0",
     "postcss-use": "3.0.0",
-    "react-hot-loader": "4.3.4",
+    "react-hot-loader": "4.3.5",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.22.1",
-    "stylelint": "9.4.0",
+    "style-loader": "0.23.0",
+    "stylelint": "9.5.0",
     "stylelint-config-recommended": "2.1.0",
     "svgo": "1.0.5",
     "svgo-loader": "2.1.0",
     "uglifyjs-webpack-plugin": "1.3.0",
-    "webpack": "4.16.5",
+    "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5"
+    "webpack-dev-server": "3.1.6"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-rc.1",
+    "@babel/runtime": "7.0.0",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
-    "@octetstream/promisify": "1.3.3",
-    "apollo-cache-inmemory": "1.2.8",
-    "apollo-client": "2.4.0",
+    "@octetstream/promisify": "2.0.1",
+    "apollo-cache-inmemory": "1.2.9",
+    "apollo-client": "2.4.1",
     "apollo-link": "1.2.2",
     "apollo-link-context": "1.0.8",
     "apollo-link-error": "1.1.0",
@@ -113,9 +113,9 @@
     "localforage": "1.7.2",
     "lodash": "4.17.10",
     "lodash-decorators": "6.0.0",
-    "mobx": "5.0.3",
+    "mobx": "5.1.0",
     "mobx-react": "5.2.5",
-    "mobx-state-tree": "3.2.1",
+    "mobx-state-tree": "3.2.4",
     "ms": "2.1.1",
     "nanoid": "1.2.1",
     "object-deep-from-entries": "0.3.0",
@@ -132,8 +132,8 @@
     "react-loadable": "5.5.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-spinners": "0.4.4",
+    "react-spinners": "0.4.5",
     "whatwg-fetch": "2.0.4",
-    "whatwg-url": "6.5.0"
+    "whatwg-url": "7.0.0"
   }
 }
