--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/plugin-proposal-decorators": "7.0.0",
+    "@babel/cli": "7.1.0",
+    "@babel/core": "7.1.0",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.0",
     "@babel/plugin-proposal-do-expressions": "7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
@@ -37,24 +37,24 @@
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
     "@babel/plugin-proposal-pipeline-operator": "7.0.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.0.0",
-    "@babel/preset-env": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.1.0",
+    "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.0.0",
-    "autoprefixer": "9.1.3",
+    "autoprefixer": "9.1.5",
     "ava": "0.25.0",
-    "babel-eslint": "9.0.0",
-    "babel-loader": "8.0.0",
+    "babel-eslint": "10.0.0",
+    "babel-loader": "8.0.2",
     "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.15",
-    "caniuse-lite": "1.0.30000880",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.18",
+    "caniuse-lite": "1.0.30000887",
     "css-loader": "1.0.0",
-    "cssnano": "4.1.0",
-    "enzyme": "3.5.0",
-    "eslint": "5.4.0",
+    "cssnano": "4.1.3",
+    "enzyme": "3.6.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
-    "eslint-plugin-ava": "5.1.0",
+    "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.1",
     "eslint-plugin-react": "7.11.1",
@@ -62,74 +62,75 @@
     "graphql-tag": "2.9.2",
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "0.14.3",
+    "husky": "1.0.0",
     "js-yaml": "3.12.0",
-    "lint-staged": "7.2.2",
+    "lint-staged": "7.3.0",
     "lost": "8.3.0",
-    "mini-css-extract-plugin": "0.4.2",
+    "mini-css-extract-plugin": "0.4.3",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.2",
+    "postcss": "7.0.3",
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
-    "postcss-nested": "3.0.0",
-    "postcss-normalize": "6.0.0",
-    "postcss-preset-env": "5.3.0",
+    "postcss-nested": "4.1.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.0.6",
+    "postcss-property-lookup": "^2.0.0",
     "postcss-scss": "2.0.0",
-    "postcss-simple-vars": "4.1.0",
+    "postcss-simple-vars": "5.0.1",
     "postcss-use": "3.0.0",
-    "react-hot-loader": "4.3.5",
+    "react-hot-loader": "4.3.11",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
     "style-loader": "0.23.0",
     "stylelint": "9.5.0",
     "stylelint-config-recommended": "2.1.0",
-    "svgo": "1.0.5",
-    "svgo-loader": "2.1.0",
-    "uglifyjs-webpack-plugin": "1.3.0",
-    "webpack": "4.17.1",
-    "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.6"
+    "svgo": "1.1.1",
+    "svgo-loader": "2.2.0",
+    "uglifyjs-webpack-plugin": "2.0.1",
+    "webpack": "4.20.2",
+    "webpack-cli": "3.1.1",
+    "webpack-dev-server": "3.1.9"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "2.0.1",
-    "apollo-cache-inmemory": "1.2.9",
-    "apollo-client": "2.4.1",
-    "apollo-link": "1.2.2",
-    "apollo-link-context": "1.0.8",
-    "apollo-link-error": "1.1.0",
+    "apollo-cache-inmemory": "1.2.10",
+    "apollo-client": "2.4.2",
+    "apollo-link": "1.2.3",
+    "apollo-link-context": "1.0.9",
+    "apollo-link-error": "1.1.1",
     "apollo-link-form-data": "0.3.2",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.16",
     "draft-js": "0.10.5",
-    "graphql": "0.13.2",
+    "graphql": "14.0.2",
     "js-flock": "3.5.3",
-    "koa": "2.5.2",
+    "koa": "2.5.3",
     "koa-static": "5.0.0",
     "localforage": "1.7.2",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "lodash-decorators": "6.0.0",
-    "mobx": "5.1.0",
-    "mobx-react": "5.2.5",
-    "mobx-state-tree": "3.2.4",
+    "mobx": "5.1.2",
+    "mobx-react": "5.2.8",
+    "mobx-state-tree": "3.4.0",
     "ms": "2.1.1",
-    "nanoid": "1.2.1",
+    "nanoid": "1.2.3",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.6.2",
     "query-string": "6.1.0",
-    "react": "16.4.2",
+    "react": "16.5.2",
     "react-autosize-textarea": "4.0.0",
-    "react-dom": "16.4.2",
+    "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
     "react-lazy-images": "1.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-spinners": "0.4.5",
-    "whatwg-fetch": "2.0.4",
+    "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.0.0"
   }
 }
