--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.1",
     "postcss-use": "3.0.0",
+    "react-dropzone": "^5.1.1",
     "react-hot-loader": "4.3.11",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
@@ -86,6 +87,7 @@
     "stylelint-config-recommended": "2.1.0",
     "svgo": "1.1.1",
     "svgo-loader": "2.2.0",
+    "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "2.0.1",
     "webpack": "4.20.2",
     "webpack-cli": "3.1.1",
