--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "2.0.1",
     "webpack": "4.20.2",
-    "webpack-cli": "3.1.1",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.9"
   },
   "dependencies": {
