--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
     "lint:eslint": "node_modules/.bin/eslint --fix src build",
     "lint:stylelint": "node_modules/.bin/stylelint --fix",
-    "staged": "node_modules/.bin/lint-staged",
-    "precommit": "yarn staged"
+    "staged": "node_modules/.bin/lint-staged"
   },
   "ava": {
     "files": [
@@ -26,10 +25,10 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.1.0",
-    "@babel/core": "7.1.0",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
     "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.0",
+    "@babel/plugin-proposal-decorators": "7.1.2",
     "@babel/plugin-proposal-do-expressions": "7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
@@ -43,47 +42,47 @@
     "@octetstream/eslint-config": "3.0.0",
     "autoprefixer": "9.1.5",
     "ava": "0.25.0",
-    "babel-eslint": "10.0.0",
-    "babel-loader": "8.0.2",
+    "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.18",
-    "caniuse-lite": "1.0.30000887",
+    "caniuse-lite": "1.0.30000890",
     "css-loader": "1.0.0",
-    "cssnano": "4.1.3",
-    "enzyme": "3.6.0",
-    "eslint": "5.6.0",
+    "cssnano": "4.1.4",
+    "enzyme": "3.7.0",
+    "eslint": "5.6.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-import-resolver-babel-module": "5.0.0-beta.0",
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "graphql-tag": "2.9.2",
+    "graphql-tag": "2.10.0",
     "html-webpack-harddisk-plugin": "0.2.0",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.0.0",
+    "husky": "1.1.1",
     "js-yaml": "3.12.0",
     "lint-staged": "7.3.0",
     "lost": "8.3.0",
     "mini-css-extract-plugin": "0.4.3",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.3",
+    "postcss": "7.0.5",
     "postcss-import": "12.0.0",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.1.0",
     "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.0.6",
+    "postcss-preset-env": "6.0.10",
     "postcss-property-lookup": "^2.0.0",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.1",
     "postcss-use": "3.0.0",
-    "react-dropzone": "^5.1.1",
+    "react-dropzone": "^6.0.2",
     "react-hot-loader": "4.3.11",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
-    "style-loader": "0.23.0",
-    "stylelint": "9.5.0",
+    "style-loader": "0.23.1",
+    "stylelint": "9.6.0",
     "stylelint-config-recommended": "2.1.0",
     "svgo": "1.1.1",
     "svgo-loader": "2.2.0",
@@ -94,11 +93,11 @@
     "webpack-dev-server": "3.1.9"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0",
+    "@babel/runtime": "7.1.2",
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "2.0.1",
-    "apollo-cache-inmemory": "1.2.10",
+    "apollo-cache-inmemory": "1.3.5",
     "apollo-client": "2.4.2",
     "apollo-link": "1.2.3",
     "apollo-link-context": "1.0.9",
@@ -115,17 +114,17 @@
     "localforage": "1.7.2",
     "lodash": "4.17.11",
     "lodash-decorators": "6.0.0",
-    "mobx": "5.1.2",
+    "mobx": "5.5.0",
     "mobx-react": "5.2.8",
-    "mobx-state-tree": "3.4.0",
+    "mobx-state-tree": "3.5.0",
     "ms": "2.1.1",
-    "nanoid": "1.2.3",
+    "nanoid": "1.2.6",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.6.2",
-    "query-string": "6.1.0",
+    "query-string": "6.2.0",
     "react": "16.5.2",
-    "react-autosize-textarea": "4.0.0",
+    "react-autosize-textarea": "5.0.0",
     "react-dom": "16.5.2",
     "react-helmet": "5.2.0",
     "react-lazy-images": "1.1.0",
