--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   },
   "devDependencies": {
     "@babel/cli": "7.1.5",
-    "@babel/core": "7.1.5",
+    "@babel/core": "7.1.6",
     "@babel/plugin-proposal-class-properties": "7.1.0",
-    "@babel/plugin-proposal-decorators": "7.1.2",
+    "@babel/plugin-proposal-decorators": "7.1.6",
     "@babel/plugin-proposal-do-expressions": "7.0.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
@@ -37,7 +37,7 @@
     "@babel/plugin-proposal-pipeline-operator": "7.0.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/plugin-transform-runtime": "7.1.0",
-    "@babel/preset-env": "7.1.5",
+    "@babel/preset-env": "7.1.6",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.0.0",
     "autoprefixer": "9.3.1",
@@ -46,7 +46,7 @@
     "babel-loader": "8.0.4",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.20",
-    "caniuse-lite": "1.0.30000907",
+    "caniuse-lite": "1.0.30000910",
     "css-loader": "1.0.1",
     "cssnano": "4.1.7",
     "enzyme": "3.7.0",
@@ -61,13 +61,13 @@
     "graphql-tag": "2.10.0",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "1.1.3",
+    "husky": "1.2.0",
     "js-yaml": "3.12.0",
-    "lint-staged": "8.0.4",
+    "lint-staged": "8.1.0",
     "lost": "8.3.0",
-    "mini-css-extract-plugin": "0.4.4",
+    "mini-css-extract-plugin": "0.4.5",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.5",
+    "postcss": "7.0.6",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.1.0",
@@ -88,7 +88,7 @@
     "svgo-loader": "2.2.0",
     "terser-webpack-plugin": "^1.1.0",
     "uglifyjs-webpack-plugin": "2.0.1",
-    "webpack": "4.25.1",
+    "webpack": "4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "3.1.10"
   },
@@ -97,11 +97,11 @@
     "@octetstream/invariant": "1.1.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "2.0.1",
-    "apollo-cache-inmemory": "1.3.9",
-    "apollo-client": "2.4.5",
-    "apollo-link": "1.2.3",
-    "apollo-link-context": "1.0.9",
-    "apollo-link-error": "1.1.1",
+    "apollo-cache-inmemory": "1.3.11",
+    "apollo-client": "2.4.7",
+    "apollo-link": "1.2.4",
+    "apollo-link-context": "1.0.10",
+    "apollo-link-error": "1.1.2",
     "apollo-link-form-data": "0.3.2",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
@@ -115,22 +115,23 @@
     "lodash": "4.17.11",
     "lodash-decorators": "6.0.0",
     "mobx": "5.6.0",
-    "mobx-react": "5.3.6",
-    "mobx-state-tree": "3.7.1",
+    "mobx-react": "5.4.2",
+    "mobx-state-tree": "3.8.1",
     "ms": "2.1.1",
     "nanoid": "2.0.0",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.6.2",
     "query-string": "6.2.0",
-    "react": "16.6.1",
+    "react": "16.6.3",
     "react-autosize-textarea": "5.0.0",
-    "react-dom": "16.6.1",
+    "react-dom": "16.6.3",
     "react-helmet": "5.2.0",
     "react-lazy-images": "1.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-spinners": "0.4.7",
+    "validate.js": "^0.12.0",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.0.0"
   }
