Fixes for auth related things.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "caniuse-lite": "1.0.30000921",
     "css-loader": "1.0.1",
     "cssnano": "4.1.7",
+    "decss-loader": "^0.3.0",
     "enzyme": "3.8.0",
     "eslint": "5.10.0",
     "eslint-config-airbnb": "17.1.0",
@@ -106,6 +107,7 @@
     "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.16",
+    "decss": "^0.8.0",
     "draft-js": "0.10.5",
     "graphql": "14.0.2",
     "js-flock": "3.5.3",
