--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "caniuse-lite": "1.0.30000921",
     "css-loader": "1.0.1",
     "cssnano": "4.1.7",
-    "decss-loader": "^0.3.0",
+    "decss-loader": "0.3.0",
     "enzyme": "3.8.0",
     "eslint": "5.10.0",
     "eslint-config-airbnb": "17.1.0",
@@ -74,11 +74,11 @@
     "postcss-nested": "4.1.1",
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.5.0",
-    "postcss-property-lookup": "^2.0.0",
+    "postcss-property-lookup": "2.0.0",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.1",
     "postcss-use": "3.0.0",
-    "react-dropzone": "^7.0.1",
+    "react-dropzone": "7.0.1",
     "react-hot-loader": "4.6.0",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.2",
@@ -87,10 +87,10 @@
     "stylelint-config-recommended": "2.1.0",
     "svgo": "1.1.1",
     "svgo-loader": "2.2.0",
-    "terser-webpack-plugin": "^1.1.0",
+    "terser-webpack-plugin": "1.1.0",
     "uglifyjs-webpack-plugin": "2.0.1",
     "webpack": "4.27.1",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "3.1.2",
     "webpack-dev-server": "3.1.10"
   },
   "dependencies": {
@@ -106,8 +106,8 @@
     "apollo-link-form-data": "0.4.0",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
-    "date-fns": "2.0.0-alpha.16",
-    "decss": "^0.8.0",
+    "date-fns": "2.0.0-alpha.26",
+    "decss": "0.8.0",
     "draft-js": "0.10.5",
     "graphql": "14.0.2",
     "js-flock": "3.5.3",
@@ -133,7 +133,7 @@
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-spinners": "0.4.7",
-    "validate.js": "^0.12.0",
+    "validate.js": "0.12.0",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.0.0"
   }
