Add a draft of custom resolver for postcss-import (because I can't make it read .scss files from paths relative to the project root -_-)

--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.0.0",
-    "autoprefixer": "9.4.3",
+    "autoprefixer": "9.4.4",
     "ava": "1.0.1",
     "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.4",
+    "babel-loader": "8.0.5",
     "babel-plugin-module-resolver": "3.1.1",
     "babel-plugin-transform-react-remove-prop-types": "0.4.21",
-    "caniuse-lite": "1.0.30000925",
-    "css-loader": "1.0.1",
+    "caniuse-lite": "1.0.30000927",
+    "css-loader": "2.1.0",
     "cssnano": "4.1.8",
     "decss-loader": "0.3.0",
     "enzyme": "3.8.0",
@@ -57,7 +57,7 @@
     "eslint-plugin-ava": "5.1.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.0",
+    "eslint-plugin-react": "7.12.2",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "graphql-tag": "2.10.0",
     "html-webpack-harddisk-plugin": "1.0.1",
@@ -81,7 +81,7 @@
     "react-dropzone": "7.0.1",
     "react-hot-loader": "4.6.3",
     "react-svg-loader": "2.1.0",
-    "rimraf": "2.6.2",
+    "rimraf": "2.6.3",
     "style-loader": "0.23.1",
     "stylelint": "9.9.0",
     "stylelint-config-recommended": "2.1.0",
@@ -90,7 +90,7 @@
     "terser-webpack-plugin": "1.2.1",
     "uglifyjs-webpack-plugin": "2.1.1",
     "webpack": "4.28.3",
-    "webpack-cli": "3.1.2",
+    "webpack-cli": "3.2.0",
     "webpack-dev-server": "3.1.14"
   },
   "dependencies": {
@@ -128,7 +128,7 @@
     "query-string": "6.2.0",
     "react": "16.7.0",
     "react-autosize-textarea": "6.0.0",
-    "react-dom": "16.7.0",
+    "react-dom": "npm:react-dom",
     "react-helmet": "5.2.0",
     "react-is": "^16.7.0",
     "react-lazy-images": "1.1.0",
