--- a/package.json
+++ b/package.json
@@ -27,115 +27,116 @@
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-proposal-class-properties": "7.2.3",
-    "@babel/plugin-proposal-decorators": "7.2.3",
+    "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-proposal-decorators": "7.3.0",
     "@babel/plugin-proposal-do-expressions": "7.2.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.2.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.3.4",
     "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.2.0",
+    "@babel/plugin-proposal-pipeline-operator": "7.3.2",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.2.0",
-    "@babel/preset-env": "7.2.3",
+    "@babel/plugin-transform-runtime": "7.3.4",
+    "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.0.0",
-    "autoprefixer": "9.4.4",
-    "ava": "1.0.1",
+    "autoprefixer": "9.4.9",
+    "ava": "1.2.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
-    "babel-plugin-module-resolver": "3.1.1",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.21",
-    "caniuse-lite": "1.0.30000927",
+    "babel-plugin-module-resolver": "3.2.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "caniuse-lite": "1.0.30000939",
     "css-loader": "2.1.0",
-    "cssnano": "4.1.8",
+    "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
-    "enzyme": "3.8.0",
-    "eslint": "5.11.1",
+    "enzyme": "3.9.0",
+    "eslint": "5.14.1",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-import-resolver-babel-module": "5.0.0-beta.0",
+    "eslint-import-resolver-babel-module": "5.0.1",
     "eslint-plugin-ava": "5.1.1",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.12.2",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "graphql-tag": "2.10.0",
+    "favicons-webpack-plugin": "^0.0.9",
+    "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
-    "js-yaml": "3.12.0",
-    "lint-staged": "8.1.0",
-    "lost": "8.3.0",
+    "js-yaml": "3.12.2",
+    "lint-staged": "8.1.4",
+    "lost": "8.3.1",
     "mini-css-extract-plugin": "0.5.0",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.7",
+    "postcss": "7.0.14",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
-    "postcss-nested": "4.1.1",
+    "postcss-nested": "4.1.2",
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.5.0",
     "postcss-property-lookup": "2.0.0",
     "postcss-scss": "2.0.0",
-    "postcss-simple-vars": "5.0.1",
+    "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dropzone": "7.0.1",
-    "react-hot-loader": "4.6.3",
+    "react-dropzone": "9.0.0",
+    "react-hot-loader": "4.7.1",
     "react-svg-loader": "2.1.0",
     "rimraf": "2.6.3",
     "style-loader": "0.23.1",
-    "stylelint": "9.9.0",
+    "stylelint": "9.10.1",
     "stylelint-config-recommended": "2.1.0",
-    "svgo": "1.1.1",
+    "svgo": "1.2.0",
     "svgo-loader": "2.2.0",
-    "terser-webpack-plugin": "1.2.1",
-    "uglifyjs-webpack-plugin": "2.1.1",
-    "webpack": "4.28.3",
-    "webpack-cli": "3.2.0",
-    "webpack-dev-server": "3.1.14"
+    "terser-webpack-plugin": "1.2.3",
+    "uglifyjs-webpack-plugin": "2.1.2",
+    "webpack": "4.29.5",
+    "webpack-cli": "3.2.3",
+    "webpack-dev-server": "3.2.1"
   },
   "dependencies": {
-    "@babel/runtime": "7.2.0",
+    "@babel/runtime": "7.3.4",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.0.1",
     "@octetstream/promisify": "2.0.1",
-    "apollo-cache-inmemory": "1.3.12",
-    "apollo-client": "2.4.8",
-    "apollo-link": "1.2.6",
-    "apollo-link-context": "1.0.12",
-    "apollo-link-error": "1.1.5",
+    "apollo-cache-inmemory": "1.5.0",
+    "apollo-client": "2.5.0",
+    "apollo-link": "1.2.8",
+    "apollo-link-context": "1.0.14",
+    "apollo-link-error": "1.1.7",
     "apollo-link-form-data": "0.4.0",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.26",
     "decss": "0.8.0",
     "draft-js": "0.10.5",
-    "graphql": "14.0.2",
-    "js-flock": "3.5.3",
-    "koa": "2.6.2",
+    "graphql": "14.1.1",
+    "js-flock": "3.6.1",
+    "koa": "2.7.0",
     "koa-static": "5.0.0",
     "localforage": "1.7.3",
     "lodash": "4.17.11",
     "lodash-decorators": "6.0.1",
-    "mobx": "5.8.0",
+    "mobx": "5.9.0",
     "mobx-react": "5.4.3",
-    "mobx-state-tree": "3.10.0",
+    "mobx-state-tree": "3.10.2",
     "ms": "2.1.1",
-    "nanoid": "2.0.0",
+    "nanoid": "2.0.1",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
-    "prop-types": "15.6.2",
+    "prop-types": "15.7.2",
     "query-string": "6.2.0",
-    "react": "16.7.0",
+    "react": "16.8.3",
     "react-autosize-textarea": "6.0.0",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.0",
-    "react-is": "^16.7.0",
+    "react-is": "^16.8.3",
     "react-lazy-images": "1.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-spinners": "0.4.8",
+    "react-spinners": "0.5.1",
     "validate.js": "0.12.0",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.0.0"
