--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ yarn-error.log
 
 /static/assets/js/**/*.js
 /static/assets/css/**/*.css
-/static/assets/img/icons-*
+/static/assets/img/icons/**
 /test
 /core
 /module
