--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "w": "yarn watch",
     "wo": "yarn watch --open",
     "stats": "node_modules/.bin/mkdirp runtime/webpack && NODE_ENV=production node_modules/.bin/webpack --config build --profile --json > runtime/webpack/stats.json",
-    "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css runtime",
+    "cleanup": "node_modules/.bin/rimraf static/assets/js static/assets/css static/assets/img/icons static/index.html runtime",
     "lint:eslint": "node_modules/.bin/eslint --fix src build",
     "lint:stylelint": "node_modules/.bin/stylelint --fix",
     "staged": "node_modules/.bin/lint-staged"
