--- a/package.json
+++ b/package.json
@@ -132,7 +132,7 @@
     "react-autosize-textarea": "6.0.0",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.0",
-    "react-is": "^16.8.3",
+    "react-is": "16.8.3",
     "react-lazy-images": "1.1.0",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
