--- a/package.json
+++ b/package.json
@@ -26,118 +26,121 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.4",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
+    "@babel/cli": "7.5.5",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/plugin-proposal-decorators": "7.4.4",
-    "@babel/plugin-proposal-do-expressions": "7.2.0",
+    "@babel/plugin-proposal-do-expressions": "7.5.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-pipeline-operator": "7.3.2",
+    "@babel/plugin-proposal-partial-application": "^7.4.4",
+    "@babel/plugin-proposal-pipeline-operator": "7.5.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
-    "@babel/plugin-transform-runtime": "7.4.4",
-    "@babel/preset-env": "7.4.4",
+    "@babel/plugin-transform-runtime": "7.5.5",
+    "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
-    "@octetstream/eslint-config": "3.0.0",
-    "autoprefixer": "9.5.1",
-    "ava": "1.4.1",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
+    "@octetstream/eslint-config": "3.1.0",
+    "autoprefixer": "9.6.1",
+    "ava": "2.2.0",
+    "babel-eslint": "10.0.2",
+    "babel-loader": "8.0.6",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "caniuse-lite": "1.0.30000963",
-    "css-loader": "2.1.1",
+    "caniuse-lite": "1.0.30000989",
+    "css-loader": "3.2.0",
     "cssnano": "4.1.10",
     "decss-loader": "0.3.0",
-    "enzyme": "3.9.0",
-    "eslint": "5.16.0",
-    "eslint-config-airbnb": "17.1.0",
+    "enzyme": "3.10.0",
+    "eslint": "6.1.0",
+    "eslint-config-airbnb": "18.0.0",
     "eslint-import-resolver-babel-module": "5.1.0",
-    "eslint-plugin-ava": "6.0.0",
-    "eslint-plugin-import": "2.17.2",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-ava": "7.1.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.14.3",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "favicons-webpack-plugin": "^0.0.9",
     "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
-    "husky": "2.1.0",
+    "husky": "3.0.3",
     "js-yaml": "3.13.1",
-    "lint-staged": "8.1.5",
+    "lint-staged": "9.2.1",
     "lost": "8.3.1",
-    "mini-css-extract-plugin": "0.6.0",
+    "mini-css-extract-plugin": "0.8.0",
     "mkdirp": "0.5.1",
-    "postcss": "7.0.14",
+    "postcss": "7.0.17",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.1.2",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.6.0",
+    "postcss-normalize": "8.0.1",
+    "postcss-preset-env": "6.7.0",
     "postcss-property-lookup": "2.0.0",
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dropzone": "10.1.4",
-    "react-hot-loader": "4.8.4",
-    "react-svg-loader": "2.1.0",
+    "react-dropzone": "10.1.7",
+    "react-hot-loader": "4.12.10",
+    "react-svg-loader": "3.0.3",
     "rimraf": "2.6.3",
-    "style-loader": "0.23.1",
-    "stylelint": "10.0.1",
+    "style-loader": "1.0.0",
+    "stylelint": "10.1.0",
     "stylelint-config-recommended": "2.2.0",
-    "svgo": "1.2.2",
-    "svgo-loader": "2.2.0",
-    "terser-webpack-plugin": "1.2.3",
-    "uglifyjs-webpack-plugin": "2.1.2",
-    "webpack": "4.30.0",
-    "webpack-cli": "3.3.1",
-    "webpack-dev-server": "3.3.1"
+    "svgo": "1.3.0",
+    "svgo-loader": "2.2.1",
+    "terser-webpack-plugin": "1.4.1",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.39.1",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "7.4.4",
+    "@babel/runtime": "7.5.5",
+    "@casl/ability": "^3.2.0",
+    "@casl/react": "^1.0.4",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.1.0",
     "@octetstream/promisify": "2.0.2",
-    "apollo-cache-inmemory": "1.5.1",
-    "apollo-client": "2.5.1",
-    "apollo-link": "1.2.11",
-    "apollo-link-context": "1.0.17",
-    "apollo-link-error": "1.1.10",
-    "apollo-link-form-data": "1.0.0",
+    "apollo-cache-inmemory": "1.6.3",
+    "apollo-client": "2.6.4",
+    "apollo-link": "1.2.12",
+    "apollo-link-context": "1.0.18",
+    "apollo-link-error": "1.1.11",
+    "apollo-link-form-data": "1.1.0",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
     "date-fns": "2.0.0-alpha.26",
     "decss": "0.8.0",
-    "draft-js": "0.10.5",
-    "graphql": "14.2.1",
-    "js-flock": "3.6.1",
+    "draft-js": "0.11.0",
+    "graphql": "14.4.2",
+    "js-flock": "3.10.1",
     "koa": "2.7.0",
     "koa-static": "5.0.0",
     "localforage": "1.7.3",
-    "lodash": "4.17.11",
+    "lodash": "4.17.15",
     "lodash-decorators": "6.0.1",
-    "mobx": "5.9.4",
-    "mobx-react": "5.4.3",
-    "mobx-state-tree": "3.14.0",
-    "ms": "2.1.1",
-    "nanoid": "2.0.1",
+    "mobx": "5.13.0",
+    "mobx-react": "6.1.3",
+    "mobx-state-tree": "3.14.1",
+    "ms": "2.1.2",
+    "nanoid": "2.0.3",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
-    "query-string": "6.5.0",
-    "react": "16.8.6",
+    "query-string": "6.8.2",
+    "react": "16.9.0",
     "react-autosize-textarea": "7.0.0",
     "react-dom": "npm:react-dom",
-    "react-helmet": "5.2.0",
-    "react-is": "16.8.6",
+    "react-helmet": "5.2.1",
+    "react-is": "16.9.0",
     "react-lazy-images": "1.1.0",
-    "react-router": "5.0.0",
-    "react-router-dom": "5.0.0",
-    "react-spinners": "0.5.4",
-    "validate.js": "0.12.0",
+    "react-router": "5.0.1",
+    "react-router-dom": "5.0.1",
+    "react-spinners": "0.5.13",
+    "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "7.0.0"
   }
