--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.1.0",
+    "@svgr/webpack": "^4.3.3",
     "autoprefixer": "9.6.1",
     "ava": "2.2.0",
     "babel-eslint": "10.0.2",
@@ -72,6 +73,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "mkdirp": "0.5.1",
     "postcss": "7.0.17",
+    "postcss-font-magician": "^2.3.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.1.2",
@@ -98,7 +100,7 @@
     "webpack-dev-server": "3.8.0"
   },
   "dependencies": {
-    "@babel/runtime": "7.5.5",
+    "@babel/runtime": "7.7.2",
     "@casl/ability": "^3.2.0",
     "@casl/react": "^1.0.4",
     "@hot-loader/react-dom": "npm:react-dom",
@@ -107,42 +109,42 @@
     "@octetstream/promisify": "2.0.2",
     "apollo-cache-inmemory": "1.6.3",
     "apollo-client": "2.6.4",
-    "apollo-link": "1.2.12",
-    "apollo-link-context": "1.0.18",
-    "apollo-link-error": "1.1.11",
+    "apollo-link": "1.2.13",
+    "apollo-link-context": "1.0.19",
+    "apollo-link-error": "1.1.12",
     "apollo-link-form-data": "1.1.0",
     "awaity": "1.0.0",
     "classnames": "2.2.6",
-    "date-fns": "2.0.0",
+    "date-fns": "2.7.0",
     "decss": "0.8.0",
-    "draft-js": "0.11.0",
-    "graphql": "14.4.2",
-    "js-flock": "3.10.1",
-    "koa": "2.7.0",
+    "draft-js": "0.11.2",
+    "graphql": "14.5.8",
+    "js-flock": "3.12.0",
+    "koa": "2.11.0",
     "koa-static": "5.0.0",
     "localforage": "1.7.3",
     "lodash": "4.17.15",
     "lodash-decorators": "6.0.1",
-    "mobx": "5.13.0",
-    "mobx-react": "6.1.3",
-    "mobx-state-tree": "3.14.1",
+    "mobx": "5.15.0",
+    "mobx-react": "6.1.4",
+    "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
-    "nanoid": "2.0.3",
+    "nanoid": "2.1.6",
     "object-deep-from-entries": "0.3.0",
     "object-path": "0.11.4",
     "prop-types": "15.7.2",
-    "query-string": "6.8.2",
-    "react": "16.9.0",
+    "query-string": "6.8.3",
+    "react": "16.11.0",
     "react-autosize-textarea": "7.0.0",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
-    "react-is": "16.9.0",
+    "react-is": "16.11.0",
     "react-lazy-images": "1.1.0",
-    "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
-    "react-spinners": "0.5.13",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-spinners": "0.6.1",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
-    "whatwg-url": "7.0.0"
+    "whatwg-url": "7.1.0"
   }
 }
