--- a/package.json
+++ b/package.json
@@ -35,14 +35,14 @@
     "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/plugin-proposal-optional-catch-binding": "7.2.0",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-partial-application": "^7.4.4",
+    "@babel/plugin-proposal-partial-application": "7.4.4",
     "@babel/plugin-proposal-pipeline-operator": "7.5.0",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/plugin-transform-runtime": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
     "@octetstream/eslint-config": "3.1.0",
-    "@svgr/webpack": "^4.3.3",
+    "@svgr/webpack": "4.3.3",
     "autoprefixer": "9.6.1",
     "ava": "2.2.0",
     "babel-eslint": "10.0.2",
@@ -62,7 +62,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
-    "favicons-webpack-plugin": "^0.0.9",
+    "favicons-webpack-plugin": "0.0.9",
     "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
     "html-webpack-plugin": "3.2.0",
@@ -73,7 +73,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "mkdirp": "0.5.1",
     "postcss": "7.0.17",
-    "postcss-font-magician": "^2.3.0",
+    "postcss-font-magician": "2.3.0",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.1.2",
@@ -83,11 +83,12 @@
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dev-utils": "^9.1.0",
+    "react-dev-utils": "9.1.0",
     "react-dropzone": "10.1.7",
     "react-hot-loader": "4.12.10",
     "react-svg-loader": "3.0.3",
     "rimraf": "2.6.3",
+    "serve": "11.2.0",
     "style-loader": "1.0.0",
     "stylelint": "10.1.0",
     "stylelint-config-recommended": "2.2.0",
@@ -101,8 +102,8 @@
   },
   "dependencies": {
     "@babel/runtime": "7.7.4",
-    "@casl/ability": "^3.2.0",
-    "@casl/react": "^1.0.4",
+    "@casl/ability": "3.2.0",
+    "@casl/react": "1.0.4",
     "@hot-loader/react-dom": "npm:react-dom",
     "@octetstream/invariant": "1.2.0",
     "@octetstream/object-to-form-data": "1.1.0",
