--- a/package.json
+++ b/package.json
@@ -143,8 +143,10 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.7.2",
+    "react-use": "^13.14.0",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
-    "whatwg-url": "7.1.0"
+    "whatwg-url": "7.1.0",
+    "wouter": "^2.4.0"
   }
 }
