--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
     "postcss-scss": "2.0.0",
     "postcss-simple-vars": "5.0.2",
     "postcss-use": "3.0.0",
-    "react-dev-utils": "^10.0.0",
+    "react-dev-utils": "10.0.0",
     "react-dropzone": "10.2.1",
     "react-hot-loader": "4.12.18",
     "react-svg-loader": "3.0.3",
@@ -143,10 +143,9 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.7.2",
-    "react-use": "^13.14.0",
+    "react-use": "13.14.0",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
-    "whatwg-url": "7.1.0",
-    "wouter": "^2.4.0"
+    "whatwg-url": "7.1.0"
   }
 }
