--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@twi-project/client-service",
+  "name": "@twi-project/web",
   "author": "Nick K.",
   "version": "0.1.0",
   "license": "MIT",
