--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "favicons-webpack-plugin": "3.0.0",
     "graphql-tag": "2.10.1",
     "html-webpack-harddisk-plugin": "1.0.1",
-    "html-webpack-plugin": "3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "husky": "4.0.1",
     "js-yaml": "3.13.1",
     "lint-staged": "9.5.0",
