--- a/package.json
+++ b/package.json
@@ -143,7 +143,7 @@
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.0",
-    "react-use": "13.14.3",
+    "react-use": "^13.14.3",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "8.0.0"
