--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-import": "2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "extract-text-webpack-plugin": "4.0.0-beta.0",
     "favicons-webpack-plugin": "3.0.0",
     "graphql-tag": "2.10.1",
