--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
     "query-string": "6.9.0",
     "react": "16.12.0",
     "react-autosize-textarea": "7.0.0",
+    "react-cache": "^2.0.0-alpha.1",
     "react-dom": "npm:react-dom",
     "react-helmet": "5.2.1",
     "react-is": "16.12.0",
