--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "date-fns": "2.9.0",
     "decss": "0.8.0",
     "draft-js": "0.11.4",
+    "fast-deep-equal": "^3.1.1",
     "graphql": "14.5.8",
     "js-flock": "3.12.0",
     "koa": "2.11.0",
