--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/plugin-proposal-partial-application": "7.7.4",
     "@babel/plugin-proposal-pipeline-operator": "7.7.7",
     "@babel/plugin-syntax-dynamic-import": "7.7.4",
+    "@babel/plugin-syntax-import-meta": "^7.8.0",
     "@babel/plugin-transform-runtime": "7.7.6",
     "@babel/preset-env": "7.7.7",
     "@babel/preset-react": "7.7.4",
