--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "lodash-decorators": "6.0.1",
     "mobx": "5.15.1",
     "mobx-react": "6.1.4",
+    "mobx-react-lite": "^1.5.2",
     "mobx-state-tree": "3.15.0",
     "ms": "2.1.2",
     "nanoid": "2.1.9",
