--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "mini-css-extract-plugin": "0.9.0",
     "mkdirp": "0.5.1",
     "postcss": "7.0.26",
-    "postcss-font-magician": "2.3.1",
+    "postcss-font-magician": "^2.3.1",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nested": "4.2.1",
