--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "react-router-dom": "5.1.2",
     "react-spinners": "0.8.0",
     "react-use": "13.22.3",
+    "use-events": "^1.4.1",
     "validate.js": "0.13.1",
     "whatwg-fetch": "3.0.0",
     "whatwg-url": "8.0.0"
